--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -11,7 +12,6 @@ body {
   overflow: hidden;
   background-color: #333;
 }
-
 .topnav a {
   float: left;
   color: #f2f2f2;
@@ -30,6 +30,7 @@ body {
   background-color: #4CAF50;
   color: white;
 }
+
 </style>
 </head>
 <body>
@@ -39,6 +40,7 @@ body {
   <a href="news.html">Image</a>
   <a href="video.html">Video</a>
   <a href="table.html">Table</a>
+  <a href="email.html">Email</a>
 </div>
 
 <div style="padding-left:16px">
