--- a/table.html
+++ b/table.html
@@ -50,6 +50,7 @@ body {
   <a href="hello.html">Image</a>
   <a href="video.html">Video</a>
   <a class="active" href="table.html">Table</a>
+  <a href="email.html">Email</a>
 </div>
 <h2>Projects</h2>
 
