--- a/video.html
+++ b/video.html
@@ -48,6 +48,7 @@ body {
   <a href="news.html">Image</a>
   <a class="active" href="video.html">Video</a>
   <a href="table.html">Table</a>
+  <a href="email.html">Email</a>
 </div>
 
 <div class = "container">
